--- a/style.css
+++ b/style.css
@@ -1470,32 +1470,9 @@ header.site-header > .col-full {
 	-webkit-box-shadow: 0 2px 6px 0 rgba(69, 73, 91, 0.08);
 	        box-shadow: 0 2px 6px 0 rgba(69, 73, 91, 0.08);
 }
-body.has-header-image .site-header:after {
-	position: absolute;
-	content: "";
-	display: block;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	pointer-events: none;
-	background-color: inherit;
-}
 .site-header {
     background-position: center;
     background-size: cover;
-}
-.site-header-background-image img {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-	-o-object-fit: cover;
-       object-fit: cover;
 }
 @media (min-width: 82.0625em) {
 	body #masthead > .col-full {
@@ -5173,7 +5150,7 @@ body.single-post article.post.hentry .entry-footer .tags-links:before {
 #masthead ul.sub-menu > li > ul.sub-menu:before,
 #masthead ul.menu > li.menu-item-has-children > ul.sub-menu:before,
 #masthead ul.sub-menu,
-#masthead,
+body:not(.has-header-image) #masthead,
 .wp-block-tag-cloud a.tag-cloud-link,
 article.post.hentry .wp-block-pullquote:not(.is-style-solid-color) blockquote:after,
 article.post.hentry .wp-block-pullquote:not(.is-style-solid-color) blockquote:before,
