--- a/assets/admin/css/style-editor-woocommerce.css
+++ b/assets/admin/css/style-editor-woocommerce.css
@@ -252,6 +252,16 @@
 	padding-top: 1.5em;
 }
 /*--------------------------------------------------------------
+# Featured product
+--------------------------------------------------------------*/
+.wc-block-featured-product .wc-block-featured-product__link {
+    z-index: 20;
+}
+.edit-post-visual-editor .wc-block-featured-product .block-editor-block-list__layout>.block-editor-block-list__block[data-align=left]:first-child,
+.edit-post-visual-editor .wc-block-featured-product .block-editor-block-list__layout>.block-editor-block-list__block[data-align=right]:first-child {
+    margin-top: 0;
+}
+/*--------------------------------------------------------------
 # Colors
 --------------------------------------------------------------*/
 .star-rating span:before {
